<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.dogusumit.faktoriyelveardisiksayilar.activity1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="@string/text1" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint1"
            android:inputType="numberDecimal|numberSigned"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignRight="@+id/radioRelative"
            android:layout_alignEnd="@+id/radioRelative" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText8"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint1"
            android:inputType="numberDecimal|numberSigned"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignRight="@+id/editText8"
            android:layout_alignEnd="@+id/editText8" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText9"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint1"
            android:inputType="numberDecimal|numberSigned"
            android:imeOptions="actionDone"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignRight="@+id/editText9"
            android:layout_alignEnd="@+id/editText9" />

        <LinearLayout
            android:id="@+id/radioRelative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText10"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/text3" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text4"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text5" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text3"
                android:enabled="false"
                android:visibility="invisible"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioRelative"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text6"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/textView1"
            android:layout_alignRight="@+id/radioRelative"
            android:layout_alignEnd="@+id/radioRelative"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textView5"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:gravity="center"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editText8"
            android:layout_toRightOf="@+id/editText8"
            android:text="@string/hint2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/editText8"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editText9"
            android:layout_toRightOf="@+id/editText9"
            android:text="@string/hint3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/editText9"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editText10"
            android:layout_toRightOf="@+id/editText10"
            android:text="@string/hint4"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/editText10"
            android:gravity="center"/>

    </RelativeLayout>
</ScrollView>
